--- a/stunotes/java/后端/mybatis-generator_dtd/ssm整合generator自动生成代码/lhb-shiro/pom.xml
+++ b/stunotes/java/后端/mybatis-generator_dtd/ssm整合generator自动生成代码/lhb-shiro/pom.xml
@@ -13,6 +13,7 @@
 		<mybatis.spring.version>1.3.0</mybatis.spring.version>
 		<mysql.version>5.1.30</mysql.version>
 		<druid.version>1.0.28</druid.version>
+		<fastjson.version>1.2.32</fastjson.version>
   </properties>
   
   <dependencies>
@@ -106,6 +107,18 @@
 		<groupId>javax.servlet</groupId>
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
+	</dependency>
+	<!-- fastjson -->
+	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>fastjson</artifactId>
+		<version>${fastjson.version}</version>
+	</dependency>
+	<!-- log4j -->
+	<dependency>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	  <version>1.2.16</version>
 	</dependency>
   </dependencies>
   <build>
