--- a/stunotes/java/后端/mybatis-generator_dtd/ssm整合generator自动生成代码/lhb-shiro/src/main/webapp/WEB-INF/web.xml
+++ b/stunotes/java/后端/mybatis-generator_dtd/ssm整合generator自动生成代码/lhb-shiro/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,17 @@
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-  	
+
+	<!-- log4j日志输出 -->
+	<context-param>
+	    <param-name>log4jConfigLocation</param-name>
+	    <param-value>classpath:properties/log4j.properties</param-value>
+	</context-param>
+	
+	<listener>
+    	<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+	  	
   	<!-- mvc servlet -->
   	<servlet>
   		<servlet-name>springmvc</servlet-name>
