完善文件夹的分类

--- a/stunotes/java/后端/shiroCas/shiro-cas-demo/lihuibo-shirocas/client3/src/main/webapp/WEB-INF/web.xml
+++ b/stunotes/java/后端/shiroCas/shiro-cas-demo/lihuibo-shirocas/client3/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:spring/application.xml,
-			classpath:spring/spring-shiro.xml
+			classpath:spring/application.xml
 		</param-value>
 	</context-param>
 	<listener>
