--- a/stunotes/java/后端/shiroCas/shiro-cas-demo/lihuibo-shirocas/client3/pom.xml
+++ b/stunotes/java/后端/shiroCas/shiro-cas-demo/lihuibo-shirocas/client3/pom.xml
@@ -15,6 +15,7 @@
   <properties>
   	<slf4j.version>1.7.5</slf4j.version>
   	<logback.version>1.0.13</logback.version>
+  	<shiroCas.version>1.4.0</shiroCas.version>
   </properties>
   
   <dependencies>
@@ -30,6 +31,13 @@
   	<dependency>
   		<groupId>org.apache.shiro</groupId>
   		<artifactId>shiro-core</artifactId>
+  	</dependency>
+  	
+  	<!-- 集成cas jar包 -->
+  	<dependency>
+  		<groupId>org.apache.shiro</groupId>
+  		<artifactId>shiro-cas</artifactId>
+  		<version>${shiroCas.version}</version>
   	</dependency>
   	
   	<!-- 日志 jar -->
